# cap

./: .replit  README.md  app.py  food_recommender.py  main.py  package-lock.json  package.json  pyproject.toml  render_input_page.py  run_streamlit.py  settings.py
api/: __init__.py  food_recommender.py  korean_food_loader.py  main.py  models.py  recommend.py  run.py  utils.py
attached_assets/: Pasted--1-1-Streamlit-Python--1748452759592.txt  Pasted--MainInputPage-tsx-React-TypeScript-Zustand-Axios--1748108258531.txt  Pasted--React-API-src-api-mockRecommend-ts-src-api-mo-1748108753903.txt  Pasted--React-TypeScript-Zustand-AI-SummaryPage-tsx--1748119900782.txt  Pasted--React-TypeScript-Zustand-Alert-UI--1748121402831.txt  Pasted--React-Zustand-4-MainInputPage-RecommendPage-MealConfigPage-SummaryPage-1748109722701.txt  Pasted--React-Zustand-Zustand-Store--1748111020198.txt  Pasted--RecommendPage-RecommendPage-RecommendPage-AI--1748110183911.txt  Pasted--Replit-GPT-Project-Initialization-and-Development-Directive-Project-Overview-Develop-a-perso-1748104453698.txt  Pasted--Zustand-useUserInfoStore-ts-src-stores-use-1748108640140.txt  정제 데이터 .json  정제 데이터.json
data/: 정제 데이터.json
scripts/: batch_import_foods.js  complete_food_import.js  create_sqlite_db.py  force_complete_import.js  import_korean_foods.js  import_korean_foods.sql  import_korean_foods_complete.js  import_korean_foods_fixed.js  import_refined_korean_foods.js  import_remaining_foods.js
server/: index.ts  routes.ts  storage.ts
shared/: schema.ts
utils/: nutrition_visualizer.py  recommender.py  (+3 more)
(+40 files in other folders)
