[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "altair>=5.5.0",
    "fastapi>=0.115.12",
    "numpy>=2.2.6",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "pydantic>=2.11.5",
    "python-dotenv>=1.1.0",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.1",
    "uvicorn>=0.34.2",
]
